# ROS2-AutonomousRobotCar

./: .gitignore  README.md
docs/: frames_2024-05-18_05.04.21.gv
install/: local_setup.sh  setup.sh
install/bumperbot_cpp_examples/lib/bumperbot_cpp_examples/: simple_parameter  simple_publisher  simple_subscriber
install/bumperbot_cpp_examples/share/ament_index/resource_index/package_run_dependencies/: bumperbot_cpp_examples
install/bumperbot_cpp_examples/share/bumperbot_cpp_examples/: package.sh
install/bumperbot_description/share/bumperbot_description/: package.sh  package.xml
install/bumperbot_description/share/bumperbot_description/rviz/: display.rviz
install/bumperbot_description/share/bumperbot_description/urdf/: bumperbot.urdf.xacro
install/bumperbot_py_examples/share/bumperbot_py_examples/: package.sh  package.xml
log/: latest_build  latest_list
src/bumperbot_controller/: CMakeLists.txt  package.xml
src/bumperbot_controller/bumperbot_controller/: simple_controller.py
src/bumperbot_controller/config/: bumperbot_controllers.yaml  joy_config.yaml  joy_teleop_config.yaml
src/bumperbot_controller/include/bumperbot_controller/: noisy_controller.hpp  simple_controller.hpp
src/bumperbot_controller/launch/: controller.launch.py  joystick_teleop.launch.py
src/bumperbot_controller/src/: noisy_controller.cpp  simple_controller.cpp
src/bumperbot_cpp_examples/: CMakeLists.txt  package.xml
src/bumperbot_cpp_examples/include/bumperbot_cpp_examples/: simple_tf_kinematics.hpp  simple_turtlesim_kinematics.hpp
src/bumperbot_cpp_examples/src/: publisher_with_parameter.cpp  simple_parameter.cpp  simple_publisher.cpp  simple_service_client.cpp  simple_service_server.cpp  simple_subscriber.cpp  simple_tf_kinematics.cpp  simple_turtlesim_kinmatics.cpp
src/bumperbot_description/: CMakeLists.txt  package.xml
src/bumperbot_description/launch/: display.launch.py  gazebo.launch.py  gz.launch.py
src/bumperbot_description/meshes/: can.STL
src/bumperbot_description/urdf/: bumperbot.urdf.xacro  bumperbot_gazebo.xacro  bumperbot_ros2_control.xacro
src/bumperbot_localization/: CMakeLists.txt  package.xml
src/bumperbot_localization/config/: ekf.yaml
src/bumperbot_localization/include/bumperbot_localization/: kalman_filter.hpp
src/bumperbot_localization/launch/: local_localization.launch.py
src/bumperbot_localization/src/: imu_republisher.cpp  kalman_filter.cpp
src/bumperbot_msgs/: CMakeLists.txt  package.xml
src/bumperbot_msgs/srv/: AddTwoInts.srv  GetTransform.srv
src/bumperbot_py_examples/: package.xml  setup.py
src/bumperbot_py_examples/bumperbot_py_examples/: simple_parameter.py  simple_publisher.py  simple_service_client.py  simple_service_server.py  simple_tf_kinematics.py  turtlesim_kinematics.py
src/bumperbot_utils/: CMakeLists.txt  package.xml
src/bumperbot_utils/include/bumperbot_utils/: trajectory_node.hpp
src/bumperbot_utils/src/: trajectory_node.cpp
